@@ -47,6 +47,7 @@ import org.jdbi.v3.core.argument.NullArgument;
 import org.jdbi.v3.core.argument.ObjectArgument;
 import org.jdbi.v3.core.qualifier.NVarchar;
 import org.jdbi.v3.core.qualifier.QualifiedType;
+import org.jdbi.v3.core.statement.internal.DefineBindsTemplateEngine;
 import org.jdbi.v3.core.generic.GenericType;
 import org.jdbi.v3.core.mapper.Mappers;
 import org.jdbi.v3.core.mapper.RowMapper;
@@ -1469,6 +1470,16 @@ public abstract class SqlStatement<This extends SqlStatement<This>> extends Base
                 .collect(joining(", "));
 
         return define(key, value);
+    }
+
+    /**
+     * Define all bound arguments that don't already have a definition.
+     * @return this
+     */
+    @Beta
+    public This defineBinds() {
+        return configure(SqlStatements.class, s ->
+            s.setTemplateEngine(new DefineBindsTemplateEngine(s.getTemplateEngine())));
     }
 
     PreparedStatement internalExecute() {
