@@ -24,6 +24,7 @@
     - Support for Postgres MACADDR columns, using the @MacAddr qualifying annotation
     - Support for HSTORE columns, using the @HStore annotation
     - @Json type qualifier with Jackson 2 and Gson 2 bindings
+    - defineBinds and @DefineBinds let you copy bindings to definitions
   - Oracle DB support changes
     - Due to ongoing stability problems with Oracle's Maven servers, we have split the
       jdbi3-oracle12 artifact out of the main project, to a new home at
